# CodeSentinel-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/dev/: AI源码漏洞扫描系统技术设计文档.md  agent_interaction_flow.md  data_model_schema.json  dev_env.md  mvp_specification.md  openapi.yaml  vulnerability_scan_system.md  任务书.md
script/: setup.sh
src/codesentinel/: __init__.py  main.py
tests/unit/: test_main.py
